Fix RecentEventsCounter looping error.

When GetBucketIndex(start) == end_index we want to sum the entire array,
but we end up summing none of the array.

We need a way to sum all the elements of event_count_. That can never
happen if the loop never iterates for i == end_index. event_count_[end_index]
is never part of the sum.

Bug: 860413
Change-Id: I5c6f65f427b71d2103374cf1bfcee533ac91979e
Reviewed-on: https://chromium-review.googlesource.com/1126803
Reviewed-by: Dan Erat <derat@chromium.org>
Reviewed-by: Jia Meng <jiameng@chromium.org>
Commit-Queue: Paul Dyson <pdyson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572868}
Former-commit-id: 8c60d6ca33741c742470e7851c056b8105980d12